--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 # globs
+
+MagicVilla_VillaAPI/local/volumes/postgresql/**
+MagicVilla_VillaAPI/local/volumes/postgresql/postgresql_data/global/**
+
+**/volumes/**
+**/volumes/postgresql/**
+**/volumes/postgresql/postgresql_data/**
+
 Makefile.in
 *.userprefs
 *.usertasks
