--- a/MagicVilla_VillaAPI/MagicVilla_VillaAPI.csproj
+++ b/MagicVilla_VillaAPI/MagicVilla_VillaAPI.csproj
@@ -31,9 +31,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="local\volumes" />
     <Folder Include="log" />
-    <Folder Include="model\" />
+    <Folder Include="Models\" />
     <Folder Include="data\" />
   </ItemGroup>
 </Project>
