updates (not working)

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Port=5432;Userid=villauser;Password=abcd.1234;Database=villadb"
+  },
+  "ApiSettings": {
+    "Secret": "0o49felioDFaıQ!!4mvksfmdk4;.",
+    "User": "a",
+    "Password": "a"
   }
 }
 
